--- a/client/style.css
+++ b/client/style.css
@@ -10,7 +10,7 @@
 
 .navbar-left {
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-between;
   padding: 6px;
 }
@@ -32,6 +32,7 @@ a.store {
 
 .navbar-right {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
 }
 
